--- a/reader.html
+++ b/reader.html
@@ -57,10 +57,10 @@
     /* Prev/Next nav */
     .nav {
       position:fixed;
-      bottom:12px; left:50%;
+      bottom:16px; left:50%;
       transform:translateX(-50%);
       background:rgba(255,255,255,0.9);
-      padding:8px 12px;
+      padding:8px 16px;
       border-radius:6px;
       box-shadow:0 2px 4px rgba(0,0,0,0.1);
       z-index:500;
@@ -92,7 +92,7 @@
 
   <!-- PDF.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
-  <!-- Paddle checkout overlay -->
+  <!-- Paddle v2 overlay -->
   <script src="https://cdn.paddle.com/paddle/v2/paddle.js"></script>
 </head>
 <body>
@@ -118,54 +118,64 @@
 
   <script>
   window.addEventListener('load', () => {
-    // ======= PADDLE SETUP =======
-    Paddle.Environment.set('sandbox');                  // 'sandbox' for local/testing, switch to 'production' when live
-    Paddle.Setup({ vendor: 231536 /* number */ });
+    // ======= PADDLE CONFIG =======
+    // Your Client-Side Token from Paddle → Developer Tools → Authentication
+    const PADDLE_CLIENT_TOKEN   = 'live_d9709459d165e6395bafefd43a7';   // ← e.g. 'pub_live_ABC123…' or 'pub_test_ABC123…'
+    // Sandbox or production?
+    Paddle.Environment.set('sandbox');                        // use 'production' on go-live
+    // Initialize Paddle with your client token
+    Paddle.Initialize({ token: PADDLE_CLIENT_TOKEN });
 
-    const MONTHLY_ID = 'pri_01jvt7hbtn145k3jm1em2w8eme';         // e.g. 'pri_XXXXXXXXXXXXXX'
-    const YEARLY_ID  = 'pri_01jvt7mqrtaxmheszs3afz8ex0';          // e.g. 'pri_YYYYYYYYYYYYYY'
+    // Your Price IDs from Products → Prices → Copy Price ID
+    const PADDLE_MONTHLY_ID     = 'pri_01jvt7hbtn145k3jm1em2w8eme';    // ← e.g. 'pri_XXXXXXXXXXXXXXXX'
+    const PADDLE_YEARLY_ID      = 'pri_01jvt7mqrtaxmheszs3afz8ex0';     // ← e.g. 'pri_YYYYYYYYYYYYYYYY'
 
-    // Open overlay
-    document.getElementById('monthly-btn').onclick = () =>
-      Paddle.Checkout.open({ product: MONTHLY_ID });
-    document.getElementById('yearly-btn').onclick = () =>
-      Paddle.Checkout.open({ product: YEARLY_ID });
+    // Open the overlay with a successCallback to unlock
+    document.getElementById('monthly-btn').onclick = () => {
+      Paddle.Checkout.open({
+        product:         PADDLE_MONTHLY_ID,
+        successCallback: onSubscribed
+      });
+    };
+    document.getElementById('yearly-btn').onclick = () => {
+      Paddle.Checkout.open({
+        product:         PADDLE_YEARLY_ID,
+        successCallback: onSubscribed
+      });
+    };
 
-    // Unlock on success
-    Paddle.Checkout.Register('Checkout.Complete', data => {
-      if (data.checkout && data.checkout.completed) {
-        localStorage.setItem('subscribed','true');
-        document.getElementById('paywall').style.display = 'none';
-        queueRenderPage(pageNum);
-      }
-    });
-    // ============================
+    function onSubscribed() {
+      localStorage.setItem('subscribed','true');
+      document.getElementById('paywall').style.display = 'none';
+      queueRenderPage(pageNum);
+    }
+    // ==============================
 
     // ===== PDF.js SETUP =====
     pdfjsLib.GlobalWorkerOptions.workerSrc =
       'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
 
-    const params = new URLSearchParams(location.search),
-          bookId = params.get('book') || '1',
-          pdfUrl = `/ebooks/book-${bookId}.pdf`;
+    const params = new URLSearchParams(location.search);
+    const bookId = params.get('book') || '1';
+    const pdfUrl = `/ebooks/book-${bookId}.pdf`;
 
     console.log('Loading PDF:', pdfUrl);
 
-    const loader  = document.getElementById('loader'),
-          paywall = document.getElementById('paywall');
+    const loader  = document.getElementById('loader');
+    const paywall = document.getElementById('paywall');
 
     function showLoader(on) {
       loader.style.display = on ? 'flex' : 'none';
     }
 
-    // 1) HEAD-check, then fetch and parse
-    fetch(pdfUrl, { method:'HEAD' })
+    // 1) HEAD-check, then fetch & parse PDF
+    fetch(pdfUrl, { method: 'HEAD' })
       .then(res => {
         if (!res.ok) throw new Error(`HTTP ${res.status}`);
         return pdfjsLib.getDocument(pdfUrl).promise;
       })
       .then(pdfDoc => {
-        console.log('PDF loaded: pages=', pdfDoc.numPages);
+        console.log('PDF loaded, pages:', pdfDoc.numPages);
         document.getElementById('page-count').textContent = pdfDoc.numPages;
         showLoader(false);
         initializeViewer(pdfDoc);
@@ -178,15 +188,15 @@
         </p>`;
       });
 
-    // Render + paywall logic
+    // Render logic with paywall gating
     let pageNum=1, pageIsRendering=false, pageNumPending=null;
     function initializeViewer(pdfDoc) {
       const canvasEl = document.getElementById('canvas'),
             ctx      = canvasEl.getContext('2d');
 
       function renderPage(num) {
-        // free pages 1–5 only
-        if (num>5 && localStorage.getItem('subscribed')!=='true') {
+        // Gate pages 6+ if not subscribed
+        if (num > 5 && localStorage.getItem('subscribed') !== 'true') {
           paywall.style.display = 'flex';
           return;
         }
@@ -197,9 +207,9 @@
           const vp = page.getViewport({ scale:1.5 });
           canvasEl.height = vp.height;
           canvasEl.width  = vp.width;
-          page.render({ canvasContext: ctx, viewport: vp }).promise.then(()=>{
+          page.render({ canvasContext: ctx, viewport: vp }).promise.then(() => {
             pageIsRendering=false;
-            if (pageNumPending!==null) {
+            if (pageNumPending !== null) {
               renderPage(pageNumPending);
               pageNumPending=null;
             }
@@ -222,7 +232,6 @@
         pageNum++; queueRenderPage(pageNum);
       };
 
-      // first page
       renderPage(pageNum);
     }
   });
