--- a/reader.html
+++ b/reader.html
@@ -49,44 +49,28 @@
     }
 
     /* Canvas */
-    #canvas {
-      display:block;
-      width:100%;
-    }
+    #canvas { display:block; width:100%; }
 
     /* Prev/Next nav */
     .nav {
-      position:fixed;
-      bottom:16px; left:50%;
+      position:fixed; bottom:16px; left:50%;
       transform:translateX(-50%);
       background:rgba(255,255,255,0.9);
-      padding:8px 16px;
-      border-radius:6px;
+      padding:8px 16px; border-radius:6px;
       box-shadow:0 2px 4px rgba(0,0,0,0.1);
-      z-index:500;
-      display:flex;
-      align-items:center;
+      z-index:500; display:flex; align-items:center;
     }
     .nav button {
-      margin:0 8px;
-      padding:6px 12px;
-      background:#b20235;
-      color:#fff;
-      border:none;
-      border-radius:4px;
-      cursor:pointer;
+      margin:0 8px; padding:6px 12px;
+      background:#b20235; color:#fff;
+      border:none; border-radius:4px; cursor:pointer;
     }
-    .nav span {
-      font-size:1rem;
-      margin:0 4px;
-    }
+    .nav span { font-size:1rem; margin:0 4px; }
 
-    /* Error message */
+    /* Error */
     .error {
-      padding:24px;
-      text-align:center;
-      color:red;
-      font-family:sans-serif;
+      padding:24px; text-align:center;
+      color:red; font-family:sans-serif;
     }
   </style>
 
@@ -118,64 +102,66 @@
 
   <script>
   window.addEventListener('load', () => {
-    // ======= PADDLE CONFIG =======
-    // Your Client-Side Token from Paddle → Developer Tools → Authentication
-    const PADDLE_CLIENT_TOKEN   = 'test_c1d926aee93e8ff9dbd35392581';   // ← e.g. 'pub_live_ABC123…' or 'pub_test_ABC123…'
-    // Sandbox or production?
-    Paddle.Environment.set('sandbox');                        // use 'production' on go-live
-    // Initialize Paddle with your client token
-    Paddle.Initialize({ token: PADDLE_CLIENT_TOKEN });
+    // ===== PADDLE CONFIGURATION =====
+    // 1) Your Vendor ID (number)
+    const PADDLE_VENDOR_ID   = 31791;                 // ← replace with YOUR vendor ID
+    // 2) Your Client-Side Token
+    const PADDLE_CLIENT_TOKEN = 'test_c1d926aee93e8ff9dbd35392581';    // ← replace with YOUR client‐side token
+    // 3) Your Price IDs
+    const PADDLE_MONTHLY_ID   = 'pri_01jvthzpme46yzb6g6b7er4jnk';  // ← replace with your monthly price ID
+    const PADDLE_YEARLY_ID    = 'pri_01jvtj0dch0kb39g9rej1qexyg';   // ← replace with your yearly price ID
 
-    // Your Price IDs from Products → Prices → Copy Price ID
-    const PADDLE_MONTHLY_ID     = 'pri_01jvthzpme46yzb6g6b7er4jnk';    // ← e.g. 'pri_XXXXXXXXXXXXXXXX'
-    const PADDLE_YEARLY_ID      = 'pri_01jvtj0dch0kb39g9rej1qexyg';     // ← e.g. 'pri_YYYYYYYYYYYYYYYY'
+    // Set environment
+    Paddle.Environment.set('sandbox'); // 'production' on go‐live
 
-    // Open the overlay with a successCallback to unlock
-    document.getElementById('monthly-btn').onclick = () => {
-      Paddle.Checkout.open({
-        product:         PADDLE_MONTHLY_ID,
-        successCallback: onSubscribed
-      });
-    };
-    document.getElementById('yearly-btn').onclick = () => {
-      Paddle.Checkout.open({
-        product:         PADDLE_YEARLY_ID,
-        successCallback: onSubscribed
-      });
-    };
+    // Initialize with vendor
+    Paddle.Setup({ vendor: PADDLE_VENDOR_ID });
 
+    // Helper: subscription flag
     function onSubscribed() {
       localStorage.setItem('subscribed','true');
       document.getElementById('paywall').style.display = 'none';
       queueRenderPage(pageNum);
     }
-    // ==============================
+
+    // Hook buttons (passing the client token **here**)
+    document.getElementById('monthly-btn').onclick = () => {
+      Paddle.Checkout.open({
+        product: PADDLE_MONTHLY_ID,
+        token:   PADDLE_CLIENT_TOKEN,
+        successCallback: onSubscribed
+      });
+    };
+    document.getElementById('yearly-btn').onclick = () => {
+      Paddle.Checkout.open({
+        product: PADDLE_YEARLY_ID,
+        token:   PADDLE_CLIENT_TOKEN,
+        successCallback: onSubscribed
+      });
+    };
+    // ================================
 
     // ===== PDF.js SETUP =====
     pdfjsLib.GlobalWorkerOptions.workerSrc =
       'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
 
-    const params = new URLSearchParams(location.search);
-    const bookId = params.get('book') || '1';
-    const pdfUrl = `/ebooks/book-${bookId}.pdf`;
+    const params = new URLSearchParams(location.search),
+          bookId = params.get('book') || '1',
+          pdfUrl = `/ebooks/book-${bookId}.pdf`;
 
     console.log('Loading PDF:', pdfUrl);
 
-    const loader  = document.getElementById('loader');
-    const paywall = document.getElementById('paywall');
+    const loader  = document.getElementById('loader'),
+          paywall = document.getElementById('paywall');
 
     function showLoader(on) {
       loader.style.display = on ? 'flex' : 'none';
     }
 
-    // 1) HEAD-check, then fetch & parse PDF
-    fetch(pdfUrl, { method: 'HEAD' })
-      .then(res => {
-        if (!res.ok) throw new Error(`HTTP ${res.status}`);
-        return pdfjsLib.getDocument(pdfUrl).promise;
-      })
+    // HEAD-check and load PDF
+    fetch(pdfUrl, { method:'HEAD' })
+      .then(r => { if(!r.ok) throw new Error(r.status); return pdfjsLib.getDocument(pdfUrl).promise; })
       .then(pdfDoc => {
-        console.log('PDF loaded, pages:', pdfDoc.numPages);
         document.getElementById('page-count').textContent = pdfDoc.numPages;
         showLoader(false);
         initializeViewer(pdfDoc);
@@ -188,48 +174,41 @@
         </p>`;
       });
 
-    // Render logic with paywall gating
+    // Render + gate logic
     let pageNum=1, pageIsRendering=false, pageNumPending=null;
     function initializeViewer(pdfDoc) {
       const canvasEl = document.getElementById('canvas'),
             ctx      = canvasEl.getContext('2d');
 
-      function renderPage(num) {
-        // Gate pages 6+ if not subscribed
-        if (num > 5 && localStorage.getItem('subscribed') !== 'true') {
+      function renderPage(n) {
+        if (n>5 && localStorage.getItem('subscribed')!=='true') {
           paywall.style.display = 'flex';
           return;
         }
         paywall.style.display = 'none';
-
-        pageIsRendering = true;
-        pdfDoc.getPage(num).then(page => {
+        pageIsRendering=true;
+        pdfDoc.getPage(n).then(page => {
           const vp = page.getViewport({ scale:1.5 });
-          canvasEl.height = vp.height;
-          canvasEl.width  = vp.width;
-          page.render({ canvasContext: ctx, viewport: vp }).promise.then(() => {
+          canvasEl.height = vp.height; canvasEl.width = vp.width;
+          page.render({ canvasContext:ctx, viewport:vp }).promise.then(()=>{
             pageIsRendering=false;
-            if (pageNumPending !== null) {
-              renderPage(pageNumPending);
-              pageNumPending=null;
+            if(pageNumPending!==null){
+              renderPage(pageNumPending); pageNumPending=null;
             }
           });
-          document.getElementById('page-num').textContent = num;
+          document.getElementById('page-num').textContent = n;
         });
       }
 
-      function queueRenderPage(num) {
-        if (pageIsRendering) pageNumPending=num;
-        else renderPage(num);
+      function queueRenderPage(n) {
+        pageIsRendering? pageNumPending=n : renderPage(n);
       }
 
       document.getElementById('prev').onclick = () => {
-        if (pageNum<=1) return;
-        pageNum--; queueRenderPage(pageNum);
+        if(pageNum>1){ pageNum--; queueRenderPage(pageNum); }
       };
       document.getElementById('next').onclick = () => {
-        if (pageNum>=pdfDoc.numPages) return;
-        pageNum++; queueRenderPage(pageNum);
+        if(pageNum < pdfDoc.numPages){ pageNum++; queueRenderPage(pageNum); }
       };
 
       renderPage(pageNum);
